--- a/README
+++ b/README
@@ -1,8 +1,6 @@
-Interactive Collaborative Filtering
-===================================
+# Interactive Collaborative Filtering
 - core/ICF.py : pretraining with Gibbs sampling.
 - core/PICF.py : pretraining with gradient descent. Just a experiment. It seems failed.
 
-References
-----------
+## Reference:
 Xiaoxue Zhao, Weinan Zhang, and Jun Wang. 2013. Interactive collaborative filtering. In Proceedings of the 22nd ACM international conference on Conference on information & knowledge management (CIKM '13). ACM, New York, NY, USA, 1411-1420. DOI=http://dx.doi.org/10.1145/2505515.2505690
